# django-migration-guy

./: .gitignore  README.md  action.yml  asd.txt  pyproject.toml
.github/workflows/: test.yml
someapp/migrations/: 0001_initial.py  0002_choice_new_votes.py  0002_question_new_field copy.py  0003_asd.py  0003_before_merge.py  0003_merge_auto_20230107214229.py  0004_merge_auto_20230107220759.py  0004_merge_auto_20230108.py  0004_merge_auto_20230108100320.py  0004_new.py  0005_merge_auto_20230108.py
src/: github.py  main.py  migration_merger.py
testapp/migrations/: 0002_later_mig.py  0004_merge_auto_20230107220547.py
