[tool.poetry]
name = "django-migration-guy"
version = "0.1.1"
description = "A GitHub action to automatically fix multiple leaf errors of Django migrations."
authors = ["Ulaş Özgüler <ulasozguler@gmail.com>"]
readme = "README.md"
packages = [{include = "django_migration_guy"}]

[tool.poetry.dependencies]
python = "^3.10"
django-migration-checker = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
